// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage > should render 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-100 px-4 bg-gray-300"
  >
    <form
      class="max-w-xl mx-auto bg-gray-100 p-6 rounded-lg shadow space-y-6"
    >
      <h1
        class="text-2xl font-bold text-center text-gray-800"
      >
        Log in to your account
      </h1>
      <div
        class=""
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="email"
        >
          Email
        </label>
        <input
          class="w-full px-3 py-2 rounded-md bg-gray-100 text-sm border border-gray-300 
            focus:outline-none focus:ring-2 focus:ring-blue-500 
            hover:cursor-text hover:border-gray-400 transition-colors"
          id="email"
          name="email"
          placeholder="e.g. user@example.com"
          type="email"
          value=""
        />
      </div>
      <div
        class=""
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="password"
        >
          Password
        </label>
        <input
          class="w-full px-3 py-2 rounded-md bg-gray-100 text-sm border border-gray-300 
            focus:outline-none focus:ring-2 focus:ring-blue-500 
            hover:cursor-text hover:border-gray-400 transition-colors"
          id="password"
          name="password"
          placeholder="Your password"
          type="password"
          value=""
        />
      </div>
      <button
        class="sc-bRKDuR eYxMyf inline-flex items-center justify-center rounded-full px-6 py-2 font-semibold min-w-[72px] min-h-[36px] transition-colors duration-200 cursor-pointer bg-blue-500 text-white border border-blue-500 hover:bg-blue-600 opacity-50 pointer-events-none w-full"
        disabled=""
        type="submit"
      >
        Log In
      </button>
    </form>
  </div>
</div>
`;

exports[`LoginPage > should render error 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-100 px-4 bg-gray-300"
  >
    <form
      class="max-w-xl mx-auto bg-gray-100 p-6 rounded-lg shadow space-y-6"
    >
      <h1
        class="text-2xl font-bold text-center text-gray-800"
      >
        Log in to your account
      </h1>
      <div
        class=""
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="email"
        >
          Email
        </label>
        <input
          class="w-full px-3 py-2 rounded-md bg-gray-100 text-sm border border-gray-300 
            focus:outline-none focus:ring-2 focus:ring-blue-500 
            hover:cursor-text hover:border-gray-400 transition-colors"
          id="email"
          name="email"
          placeholder="e.g. user@example.com"
          type="email"
          value=""
        />
      </div>
      <div
        class=""
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="password"
        >
          Password
        </label>
        <input
          class="w-full px-3 py-2 rounded-md bg-gray-100 text-sm border border-gray-300 
            focus:outline-none focus:ring-2 focus:ring-blue-500 
            hover:cursor-text hover:border-gray-400 transition-colors"
          id="password"
          name="password"
          placeholder="Your password"
          type="password"
          value=""
        />
      </div>
      <button
        class="sc-bRKDuR eYxMyf inline-flex items-center justify-center rounded-full px-6 py-2 font-semibold min-w-[72px] min-h-[36px] transition-colors duration-200 cursor-pointer bg-blue-500 text-white border border-blue-500 hover:bg-blue-600 opacity-50 pointer-events-none w-full"
        disabled=""
        type="submit"
      >
        Log In
      </button>
      <div
        aria-live="assertive"
        class="mt-4 p-3 bg-red-100 text-red-700 border border-red-300 rounded cursor-pointer text-sm text-center"
        role="alert"
      >
        ⚠️ Wrong gmail/password
      </div>
    </form>
  </div>
</div>
`;
